# organize-photos

./: pyproject.toml
organize_photos/: organize-photos.py  organize_photos.py
