[tool.poetry]
name = "organize-photos"
version = "0.1.0"
description = ""
authors = ["Lance Johnson <lance.johnson@betterup.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
